--- a/Day_2/index.html
+++ b/Day_2/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src=""></script>
+    <!-- script:src SHORTCUT / AUTOCOMPLETE-->
+    <script src="./script.js"></script>
   </body>
 </html>
